[metadata]

name = lab_tool
version = 1.3
author = dylan14567
author_email = 
description = lab_tool is a system that allows you to do ethical hacking tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylan14567/lab_tool
project_urls =
    Bug Tracker = https://github.com/dylan14567/lab_tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
